--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,28 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <a class="navbar-brand text-light" href="#">SAMPLE-WEB-PROJECT</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Danh mục
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/products">Tất cả</a>
+            <a class="dropdown-item" href="/products?category=dien-tu">Điện tử</a>
+            <a class="dropdown-item" href="/products?category=gia-dung">Đời sống</a>
+            <a class="dropdown-item" href="/products?category=doi-song">Thể thao</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </div>
 <router-outlet></router-outlet>
